fix editor overflow when dragging cards

--- a/app.css
+++ b/app.css
@@ -72,7 +72,7 @@ html, body {
     left: -45%;
     opacity: 0.75;
     padding: 5px;
-    height: 100%;
+    height: 90%;
     width: 35%;
     position: absolute;
     z-index: 9999999;
